--- a/wunderlist/src/App.css
+++ b/wunderlist/src/App.css
@@ -134,6 +134,12 @@ h1 {
   font-weight: bold;
 }
 
+h2 {
+  font-size: 23px;
+  font-family: "Roboto", sans-serif;
+  font-weight: bold;
+}
+
 h3 {
   font-size: 20px;
   font-weight: bold;
@@ -188,7 +194,7 @@ i {
   margin-top: 5px;
   margin-left: 10px;
   font-size: 40px;
-  color: #ff6e59;
+  color: #00bfff;
 }
 
 /* .fa-user-plus {
@@ -217,16 +223,15 @@ i {
   font-size: 110px;
 }
 
-.login-splash {
-  width: 100%;
-  height: 110vh;
-  background-image: url("https://i.imgur.com/baPCRtj.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  box-shadow: -8px 10px 44px 0px rgba(0, 0, 0, 0.75);
+.login-here {
+  font-size: 30px;
+  text-align: left;
+  padding: 25px 5px 25px;
+  color: #00bfff;
+  width: 70%;
 }
 
-.loggedin-splash {
+.login-splash {
   width: 100%;
   height: 101vh;
   background-image: url("./img/logo.png");
