--- a/wunderlist/src/App.css
+++ b/wunderlist/src/App.css
@@ -147,7 +147,7 @@ h3 {
 }
 
 h4 {
-   font-size: 20px;
+   font-size: 18px;
   font-weight: bold;
   font-family: "Roboto", sans-serif;
 }
@@ -270,6 +270,20 @@ i {
   cursor: pointer;
 }
 
+.btn-delete {
+  width: 100px;
+  height: 50px;
+  margin-top: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: -4px 5px 18px -3px rgba(0, 0, 0, 0.75);
+  border-radius: 5px;
+  background-color: red;
+  color: white;
+  cursor: pointer;
+}
+
 .shd {
   transform: perspective(1px) translateZ(0);
   box-shadow: 0 0 1px rgba(0, 0, 0, 0);
@@ -331,7 +345,7 @@ i {
 }
 
 .text-muted {
- margin-top: 180px;
+ margin-top: 100px;
 }
 
 @keyframes fade-in-fwd {
