--- a/wunderlist/src/App.css
+++ b/wunderlist/src/App.css
@@ -283,7 +283,7 @@ i {
 
 .btn-delete {
   width: 100px;
-  height: 50px;
+  height: 30px;
   margin-top: 25px;
   display: flex;
   justify-content: center;
@@ -291,6 +291,30 @@ i {
   box-shadow: -4px 5px 18px -3px rgba(0, 0, 0, 0.75);
   border-radius: 5px;
   background-color: red;
+  background: radial-gradient(
+    circle,
+  red 0%,
+    darkred 100%
+      );
+  color: white;
+  cursor: pointer;
+}
+
+.btn-edit {
+  width: 100px;
+  height: 30px;
+  margin-top: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: -4px 5px 18px -3px rgba(0, 0, 0, 0.75);
+  border-radius: 5px;
+  background-color:blue;
+  background: radial-gradient(
+    circle,
+  blue 0%,
+    teal 100%
+      );
   color: white;
   cursor: pointer;
 }
@@ -356,7 +380,7 @@ i {
 }
 
 .text-muted {
- margin-top: 100px;
+ margin-top: 50px;
 }
 
 @keyframes fade-in-fwd {
